--- a/manifest.json
+++ b/manifest.json
@@ -10,23 +10,19 @@
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "/images/icon-16.png",
-            "24": "/images/icon-24.png",
-            "48": "/images/icon-64.png",
-            "32": "/images/icon-32.png",
-            "64": "/images/icon-64.png",
-            "128": "/images/icon-128.png"
+            "16": "icons/icon16.png",
+            "32": "icons/icon32.png",
+            "48": "icons/icon48.png",
+            "128": "icons/icon128.png"
           },
         "default_title": "Tabnabbing Attack Detector"
     },
-    "icons":{
-        "16": "/images/icon-16.png",
-        "24": "/images/icon-24.png",
-        "48": "/images/icon-64.png",
-        "32": "/images/icon-32.png",
-        "64": "/images/icon-64.png",
-        "128": "/images/icon-128.png"
-    },
+    "icons": {
+        "16": "icons/icon16.png",
+        "32": "icons/icon32.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+      },
     "description": "Identify tabnabbing websites and detect the change",
     "content_scripts": [
         {
